VKT(Frontend): Fix overflow of privacy checkbox label on mobile

--- a/frontend/packages/vkt/src/styles/components/publicEnrollment/_public-enrollment.scss
+++ b/frontend/packages/vkt/src/styles/components/publicEnrollment/_public-enrollment.scss
@@ -79,8 +79,10 @@
         padding-left: 1rem;
         width: 70%;
 
-        & span:last-child {
-          margin-bottom: -3rem;
+        @include not-phone {
+          & span:last-child {
+            margin-bottom: -3rem;
+          }
         }
       }
     }
